fix(header): z-index調整

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,7 @@
   padding: 16px 0;
   width: 100%;
   position: fixed;
+  z-index: 1;
   top: 0;
   background-color: $color-background;
   &__toolbar {
